<resources>
    <string name="UnderlineView"><u>View</u></string>
    <string name="app_name">Madadgar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="activyt_close">Do you want to close this activity</string>
    <string name="VolanteerAlertMsg"> Dear Volunteer,
This is an emergency alert for your area. If you are in your district, willing to help and can reach the disaster affected site, please click:</string>
    <string name="Active"> Yes, Available</string>
    <string name="UnActive"> No, out of station</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="LocationHeader">Your Current Location</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="rd1">Select District</string>
    <string name="rd2">Select Tehsil</string>
    <string name="rd3">Enter Complete Address</string>
    <string name="rd4">Type of Disaster</string>
    <string name="rd5">Detail of Disaster</string>
    <string name="rd6">Upload Pictures</string>
    <string name="rd6a">from Gallery</string>
    <string name="rd6b">Camera</string>
    <string name="note">In case of false reporting,  the concerned authority can impose punishment as per National Disaster Management Act-2010 </string>
    <string name="undertaking">I herby undertake that all of the above information are authentic. I further declare that I am not reporting false data to the Provisional Disaster Management Authority, KP.</string>
    <string name="undertakingGPS"></string>
    <string name="rna1">Select District</string>
    <string name="rna2">Select Tehsil</string>
    <string name="rna3">Enter Complete Address</string>
    <string name="rna4">Type of Disaster</string>
    <string name="rna5">Immediate Needs</string>
    <string name="rna5a">Emergency Evacuation</string>
    <string name="rna5b">Shelter/Tents</string>
    <string name="rna5c">Medical First Aid</string>
    <string name="rna5d">Food Item</string>
    <string name="rna5e">Water and Sanitation</string>
    <string name="rna5f">Bridge Repair</string>
    <string name="rna5g">Road Rehabilitation</string>
    <string name="rnanote">This section is Practically dedicated to immediate needs of survivors following an emergency situation. Please make sure to share accurate demands as per the need of the affected communities.</string>
    <string name="dna1">Select District</string>
    <string name="dna2">Select Tehsil</string>
    <string name="dna3">Enter Complete Address</string>
    <string name="dna4">Name</string>
    <string name="dna5">Father Name</string>
    <string name="dna6">CNIC</string>
    <string name="dna7">Phone Number</string>
    <string name="dna8">Casualties </string>
    <string name="dna8a">Number of People Injured</string>
    <string name="dna8b">Number of People Died</string>
    <string name="dna9L">Damages to Property</string>
    <string name="dna9">House</string>
    <string name="dna9a">No damage</string>
    <string name="dna9b">Partially </string>
    <string name="dna9c">Fully </string>
    <string name="dna10">Construction type of house</string>
    <string name="dna10a">Adobe/Kacha House</string>
    <string name="dna10b">Masonry/Pakha</string>
    <string name="dna11">Ownership Status of House</string>
    <string name="dna11a">Owen</string>
    <string name="dna11b">Rented</string>
    <string name="dna12">Livelihood </string>
    <string name="dna12a">Damages to Agriculture Crops</string>
    <string name="dna12b">Damages to Horticulture </string>
    <string name="dna12c">Damages to Communal Forest</string>
    <string name="dna12d">Damages to Livestock </string>
    <string name="dna12e">Any Other </string>
    <string name="dna13">Business </string>
    <string name="dna13a">Shop </string>
    <string name="dna13b">Hotel</string>
    <string name="dna13c">Petrol Pump</string>
    <string name="dna13d">Any Other</string>
    <string name="dna14">Estimated Damages in Rupees</string>
    <string name="dna14a">Repair </string>
    <string name="dna14b">Content</string>
    <string name="dna14c">Total</string>
    <string name="dna15">Comments</string>
    <string name="S_News">	PDMA News 	</string>
    <string name="S_dw">	Weather Forecast 	</string>
    <string name="s_ew">	Early Warning 	</string>
    <string name="s_dsr">	Daily Situation Report	</string>
    <string name="s_rd">	Report Disaster 	</string>
    <string name="s_ec">	Evacuation Centres 	</string>
    <string name="s_rna">	Rapid Need Assessment 	</string>
    <string name="s_dna">	Damage Need Assessment 	</string>
    <string name="s_rar">	Risk Assessment Results 	</string>
    <string name="s_erc">	Emergency Contacts 	</string>
    <string name="s_lec">	Locate Evacuation Centres 	</string>
    <string name="s_co">	Community Outreach 	</string>
    <string name="s_ql">	Quick Links 	</string>
    <string name="s_logout">	Logout 	</string>
    <string name="s_login">	Login 	</string>
    <string name="s_urdu">	Urdu	</string>
    <string name="s_english">	Enlgish	</string>
    <string name="s_h_ass">	Assessments	</string>
    <string name="s_h_ps">	Public Services	</string>
    <string name="s_h_set">	Settings	</string>
    <string name="s_h_lang">	Select Language 	</string>
    <string name="s_h_type_disaster">	Select Type of Disaster 	</string>
    <string name="s_g_dec">	I hereby undertake that all of the above information are authentic. I further declare that i am not reporting false data to the Provincial Disaster Management Authority, KP	</string>
    <string name="s_g_note">	In case of false reporting, the concerned authority can impose punishment as per National Disaster Management Act-2010	</string>
    <string name="s_g_rna">	This section is practically dedicated to immediate needs of the survivors following an emergency situation. Please make sure to share accurate demands as per the need of the affected communities. 	</string>
    <string name="s_g_subnote">	Your report successfully submitted to PDMA Emergency Operation Centre. Thanks  	</string>
    <string name="s_g_h_subnote">	Confirmation	</string>
    <string name="s_g_h_subnote_ok">	OK	</string>
    <string name="s_g_crnt_loc">	Current Location 	</string>
    <string name="s_g_lat">	Latitude	</string>
    <string name="s_g_lon">	Longitude	</string>
    <string name="s_g_h_dec">	Declaration 	</string>
    <string name="s_g_h_note">	Note	</string>
    <string name="s_g_h_select_dist">	Select District	</string>
    <string name="s_g_h_select_tesh">	Select Tehsil	</string>
    <string name="s_g_submite"> Submit		</string>
    <string name="wadvpdma"> Early Warning </string>
    <string name="wadvpdmaup">  PDMA Khyber Pakhtunkhwa</string>
    <string name="wadvpmd">  Weather Advisory	</string>
    <string name="wadvpmdup">  Pakistan Meteorological Department	</string>
    <string name="wfheader"> Weather Forecast	</string>
    <string name="wfdate"> Select Date	</string>
    <string name="Search">Search</string>
    <string name="pdma_official_facebook_page">PDMA Official Facebook Page</string>
    <string name="pdma_official_twitter_page">PDMA Official Twitter Account</string>
    <string name="pdma_official_youtube_page">PDMA Official Youtube Channel</string>
    <string name="pdma_official_linkdin_page">PDMA Official Linkedin Account</string>
    <string name="pdma_official_website_page">Public Awareness</string>
    <string name="nav_getdata">Update Data</string>
    <string name="about_App">About App</string>
    <string name="about_App_text_h"> PDMA Madadgar App</string>
    <string name="about_App_text">

PDMA Madadgar App is an integrated system to enhance collaboration between communities across the province and disaster management authorities. The App empowers the general public to report incidents of disasters, receive and disseminate real-time early warning messages, get access to the Daily Situation Reports (DSR), register themselves as volunteers with PDMA as well as be part of the PDMA community outreach programme. The App enables government officials and local communities to immediately conduct Rapid and Damage Need Assessment and share results with the disaster management authorities both at the district and provincial level for rehabilitation and recovery initiatives. The App has been jointly developed by Mobilise Project Researchers at the Centre for Disaster Preparedness and Management, University of Peshawar, and Provincial Disaster Management Authority, Khyber Pakhtunkhwa technical team.

    </string>
    <string name="contact_us"> Contact Us</string>
    <string name="contact_us_uop"><u>Mobilise Team, University of Peshawar</u></string>
    <string name="contact_us_smj"> Dr. Mushtaq Ahmad Jan, Assistant Professor, CDPM University of Peshawar,  mushtaq@uop.edu.pk</string>
    <string name="contact_us_irf"> Mr.Irfan Syed, Senior Software Engineer, Mobilise Project, CDPM, University of Peshawar, irfansyed.pg@gmail.com</string>
    <string name="contact_us_pdma"><u>PDMA, Khyber Pakhtunkhwa </u></string>
    <string name="contact_us_peoc"> Incharge PEOC-PDMA (incharge.peoc@pdma.gov.pk)</string>
    <string name="contact_us_tausf"> Assistant Director IT and MIS, PDMA (tauseef@pdma.gov.pk) </string>
    <string name="contact_us_mc">Media Coordinator (mc.parrsa@pdma.gov.pk)</string>
    <string name="app_lang_header">Please Select Application Language</string>
    <string name="lg_email">	Email Or Phone No	</string>
    <string name="lg_pass">	Password 	</string>
    <string name="lg_login">	Login	</string>
    <string name="lg_sign_dnt">	Don\'t have an account?  <b> Signup </b>	</string>
    <string name="lg_sign">	Signup	</string>
    <string name="lg_crp">	© Mobilise, Pakistan	</string>
    <string name="su_ca">	Create Account	</string>
    <string name="su_name">	Name	</string>
    <string name="su_cnic">	CNIC #	</string>
    <string name="su_cnic_ins">	Enter your CNIC with our Dashes	</string>
    <string name="su_mob">	Mobile Number 	</string>
    <string name="su_email">	Email 	</string>
    <string name="su_emal_in">	this will be your Username	</string>
    <string name="su_pass">	Password 	</string>
    <string name="su_cm_pass">Confirm Password 	</string>
    <string name="su_pas_ins">	this will be your password 	</string>
    <string name="su_regi">	regsiter as	</string>
    <string name="su_citz">	citizen 	</string>
    <string name="su_vol">	Volunteer	</string>
    <string name="su_pdm">	PDMA Staff	</string>
    <string name="su_su">	Signup	</string>
    <string name="s_complaint">	Register Complaint 	</string>
    <string name="s_ctitle">	Subject 	</string>
    <string name="s_cdetail">	Details of Complaint 	</string>
    <string name="download">Download</string>
    <string name="close">Close</string>
    <string name="EvacationLbleText">In consultation with district governments, PDMA Khyber Pakhtunkhwa has identified safe evacuation centers in each district of the province. During an emergency/disaster, these evacuation centers are activated to evacuate people at the time of receipt of early warning/prior to actual impact of disasters or after the onset of disaster. In normal circumstances, these evacuation centers are used for public services as per their working domain</string>
</resources>