<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <item


        android:title="@string/action_settings" />


    <item android:title="@string/s_h_lang">
        <menu>
            <item
                android:id="@+id/nav_urdu"

                android:title="@string/s_urdu" />
            <item
                android:id="@+id/nav_english"

                android:title="@string/s_english" />


        </menu>
    </item>



            <item
                android:id="@+id/st_sigup"
                android:icon="@drawable/logout"
                android:title="@string/lg_sign" />
            <item
                android:id="@+id/st_login"
                android:icon="@drawable/enter"
                android:title="@string/s_login" />



    <item
        android:id="@+id/st_logout"
        android:icon="@drawable/information"
        android:title="@string/s_logout" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/information"
        android:title="@string/about_App" />


    <item
        android:id="@+id/nav_getdate"
        android:icon="@drawable/information"
        android:title="@string/nav_getdata" />



</menu>
