<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:orientation="vertical">
<!--    just testing commit -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_marginTop="2dp" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"

            android:focusable="true"
            android:clickable="true">
        <ImageButton
            android:id="@+id/lvback"
            style="@style/TopBack_img"
            />       </LinearLayout>
        <TextView
            android:layout_weight="80"
            style="@style/TopHeader_text"
            android:text="Rapid Need Assessment"
            />


    </LinearLayout>

    <View  style="@style/TopLine_View"/>

    <ScrollView style="@style/ScrollView">
        <!-- Parent layout starts -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout style="@style/nLinerLayout">

                <LinearLayout style="@style/StaricLinLayout">
                    <TextView style="@style/SLable"
                        android:text="@string/rna1" />

                    <TextView style="@style/StaricTextview" />
                </LinearLayout>

                <LinearLayout
                    style="@style/IconLinLayout"
                    android:id="@+id/rna1LV"

                    >

                    <TextView style="@style/SResponce"
                        android:layout_width="0dp"
                        android:text="@string/rna1"
                        android:layout_weight="100"
                        android:id="@+id/rna1Tv"

                        />
                    <ImageView style="@style/DownImageView"/>

                </LinearLayout>
                <View style="@style/nView"
                />

                </LinearLayout>

            <LinearLayout style="@style/nLinerLayout">

                <LinearLayout style="@style/StaricLinLayout">
                    <TextView style="@style/SLable"
                        android:text="@string/rna2" />

                    <TextView style="@style/StaricTextview" />
                </LinearLayout>


                <LinearLayout
                    style="@style/IconLinLayout"
                    android:id="@+id/rna2LV"

                    >

                    <TextView style="@style/SResponce"
                        android:layout_width="0dp"
                        android:text="@string/rna2"
                        android:layout_weight="100"
                        android:id="@+id/rna2Tv"

                        />

                    <ImageView
                        style="@style/DownImageView" />

                </LinearLayout>
                <View style="@style/nView"
                    />

            </LinearLayout>

            <LinearLayout style="@style/nLinerLayout">

                <TextView style="@style/SLable"
                    android:text="@string/rna3"

                    />

                <EditText style="@style/SResponce"
                    android:hint="@string/rna3"
                    android:lines="4" />
                <View style="@style/nView"
                    />

            </LinearLayout>


            <LinearLayout style="@style/nLinerLayout">

                <LinearLayout style="@style/StaricLinLayout">
                    <TextView style="@style/SLable"
                        android:text="@string/rna4" />

                    <TextView style="@style/StaricTextview" />
                </LinearLayout>

                <LinearLayout
                    style="@style/IconLinLayout"
                    android:id="@+id/rna4LV"

                    >

                    <TextView style="@style/SResponce"
                        android:layout_width="0dp"
                        android:text="@string/rna4"
                        android:layout_weight="100"
                        android:id="@+id/rna4Tv"

                        />

                    <ImageView
                        style="@style/DownImageView" />

                </LinearLayout>
                <View style="@style/nView"
                    />

            </LinearLayout>

            <LinearLayout style="@style/nLinerLayout">

                <TextView style="@style/SLable"
                    android:text="@string/rna5"

                    />

                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5a"
                    android:text="@string/rna5a" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5b"
                    android:text="@string/rna5b" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5c"
                    android:text="@string/rna5c" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5d"
                    android:text="@string/rna5d" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5e"
                    android:text="@string/rna5e" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5f"
                    android:text="@string/rna5f" />
                <CheckBox style="@style/SResponce"
                    android:id="@+id/rna5g"
                    android:text="@string/rna5g" />


                <View style="@style/nView" />

            </LinearLayout>




            <LinearLayout style="@style/nLinerLayout">



                <LinearLayout style="@style/StaricLinLayout">
                    <TextView style="@style/SLable"
                        android:text="Undertaking"

                        />

                    <TextView style="@style/StaricTextview" />
                </LinearLayout>
                <CheckBox style="@style/Undertaking"

                    />
                <View style="@style/nView"
                    />

            </LinearLayout>

            <LinearLayout style="@style/nLinerLayout">

                <TextView style="@style/SLable"
                    android:text="Note:"/>

                <TextView
                    style="@style/note"
                    android:text="@string/rnanote" />
                <Button
                    android:id="@+id/btnsubmit"
                    style="@style/SubmiteButt"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
</layout>
